--- a/.gitignore
+++ b/.gitignore
@@ -5,3 +5,6 @@ PiUWP/BabyReport/.vs
 Thumbs.db
 PiUWP/BabyReport/BabyReport/bin
 PiUWP/BabyReport/BabyReport/obj
+AndroidXamarin/BabyReport/BabyReport.Android/bin
+AndroidXamarin/BabyReport/BabyReport.Android/obj
+AndroidXamarin/BabyReport/.vs
